--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
 sudo: false
-language: R
+language: r
 cache: packages
-script:
-  Rscript -e 'lintr::lint("server.R")'
-  Rscript -e 'lintr::lint("ui.R")'
