Update tdmsreader version

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Imports:
     data.table (>= 1.10.0),
     shiny (>= 0.14.2),
     shinyFiles (>= 0.6.2),
-    tdmsreader (>= 0.0.1),
+    tdmsreader (>= 0.1.0)
 Suggests:
     testthat
 Remotes: msuefishlab/tdmsreader
