--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Imports:
     tools (>= 3.2.3),
     shiny (>= 0.14.2),
     shinyFiles (>= 0.6.2),
-    tdmsreader (>= 0.1.0)
+    tdmsreader (>= 0.1.0),
+    RSQLite (>= 1.1)
 Suggests:
     testthat
 Remotes: msuefishlab/tdmsreader
