--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tdmsviewer
 Type: Package
 Title: View TDMS files as a RShiny app
-Version: 0.1.0
+Version: 0.4.1
 Authors@R: c(
     person("Colin", "Diesh", email = "dieshcol@msu.edu", role = c("cre", "aut")))
 Maintainer: Colin Diesh <dieshcol@msu.edu>
@@ -14,7 +14,8 @@ Imports:
     DT (>= 0.2),
     shinyFiles (>= 0.6.2),
     tdmsreader (>= 0.1.0),
-    RSQLite (>= 1.1)
+    RSQLite (>= 1.1),
+    ggplot2 (>= 2.1.0)
 Suggests:
     testthat,
     knitr,
