Use remotes properly

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Suggests:
     testthat,
     knitr,
     rmarkdown
-Remotes: msuefishlab/tdmsreader thomasp85/shinyFiles
+Remotes: msuefishlab/tdmsreader, thomasp85/shinyFiles
 License: MIT
 Encoding: UTF-8
 RoxygenNote: 6.0.1.9000
